--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,15 @@ dependencies:
   flutter_advanced_drawer: ^1.3.6
   zoom_tap_animation: ^1.1.0
   fading_edge_scrollview: ^4.1.1
+  flutter_launcher_icons: ^0.13.1
+
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: assets/icon.png
+  image_path_ios: assets/iconIOS.png
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 dev_dependencies:
   flutter_test:
